# Gefen-X

./: .gitignore  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  MANIFEST.in  README.md  __init__.py  gefen.py  gefen_muon.py  hybrid.py  params.py  partitioning.py  pyproject.toml  quantization.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  __init__.py  issue44_param_groups.py
benchmarks/arch-compat/: README.md  _smoke.py  train_hf_detectors.py  train_rfdetr_coco.py  train_tv_detectors.py  train_yolo_coco.py  validate_asr_finetune.py  validate_audio.py  validate_cifar10.py  validate_dia_tts.py  validate_diffusion.py  validate_finetune_cls.py  validate_fsdp.py  validate_llm.py  validate_ltx2.py  validate_mnist_cnn.py  validate_speechcommands.py  validate_tts_finetune.py  validate_vision.py
benchmarks/microbench/: bench_batched_ns.py  bench_capturable_step.py  bench_layout_guard.py  bench_muon_fsdp2.py  bench_ns_fp8.py  bench_ns_schedule.py  derive_ns_schedule.py  microbench_sweep.py  microbench_v1v2.py  plot_ns_fp8.py  plot_ns_levers.py  plot_ns_schedule.py  profile_capturable_cohorts.py  profile_muon_step.py  validate_hybrid.py
benchmarks/optimizer-sweep/: .gitignore  README.md  build_table.py  config.example.yaml  fsdp2_convergence.py  optimizer_sweep_plot_helpers.py  pick_lr.py  plot_curves.py  plot_quads.py  run.sh  sweep_cell.py
benchmarks/qwen4b_fft_seq2048/configs/: adamw.yml  gefen_hybrid.yml  gefen_v1.yml
benchmarks/sharding-sweep/: .gitignore  README.md  config.example.yaml  fsdp2_convergence.py  load_config.py  plot_sharding.py  run.sh
benchmarks/trainer_resume/: README.md  __init__.py  run.py
benchmarks/training_matrix/: README.md  RESULTS_2026-07-10.md  __init__.py  cells.py  comparison.py  consistency.example.json  consistency_2x2.py  data.py  hf_sft.py  run_matrix.py  schedule.py  summarize.py  tiny_qwen.py  train.py
docs/: hardware.md  optimizer_contracts.md
docs/benchmarks/: optimizer_comparison_2000steps.csv  optimizer_comparison_2000steps.jsonl
docs/benchmarks/logs/: ns_fp8_5090.json  ns_fp8_rtxpro6000.json  ns_schedule_3090.json  ns_schedule_blackwell.json
examples/toy-finetune/: README.md  build_dataset.py  chat.py  train.py  verify.py
kernels/: _build_notice.py  automatic_gefen_fused.py  automatic_gefen_fused_binding.cpp  automatic_gefen_fused_kernel.cu  automatic_vmean.py  automatic_vmean_kernel.cu  exact_histogram_fused_kernel.cu  period_variance_kernel.cu
scripts/: release_gpu_gate.sh
src/gefen/: __init__.py  _adamw_adapter.py  canonical.py  checkpoint.py  codebook.py  contracts.py  dcp.py  dtensor.py  gefen.py  gefen_muon.py  hybrid.py  offload.py  partitioning.py  portable.py  portable_collective.py  portable_dcp.py  portable_dcp_hybrid_sharded.py  portable_dcp_sharded.py  portable_fields.py  portable_hybrid.py  portable_identity.py  portable_runtime.py  portable_schema.py  portable_state.py  portable_wire.py  rebinding.py
src/gefen/kernels/: _build_notice.py  automatic_gefen_fused.py  automatic_gefen_fused_binding.cpp  automatic_gefen_fused_kernel.cu  automatic_vmean.py  automatic_vmean_binding.cpp  exact_histogram_fused.py  exact_histogram_fused_binding.cpp  exact_histogram_fused_kernel.cu  period_variance.py  period_variance_binding.cpp  period_variance_kernel.cu
src/gefen/tools/: README.md  __init__.py  find_lr.py  run_model_calibration.py
tests/: _state_snapshot.py  run_parity_all_gpus.sh  test_amp_grad_scaler.py  test_batched_ns.py  test_benchmark_review_fixes.py  test_canonical_state_cpu.py  test_capturable.py  test_capturable_fsdp2.py  test_capturable_multistack.py  test_checkpoint_binding.py  test_checkpoint_projection_contracts.py  test_codebook_indices_parity.py  test_codebook_multi_device.py  test_codebook_scope_cpu.py  test_codebook_scope_distributed.py  test_core_correctness_cpu.py  test_cpu_resident_step.py  test_cpu_step_checkpoint.py  test_dcp_resharding.py  test_dequant_indices_parity.py  test_deterministic_mode.py  test_dispatch_gating_cpu.py  test_distributed_owner_cpu.py  test_dtensor_rebinding.py  test_dtensor_rebinding_acceptance.py  test_epsilon_muon_param_group_cpu.py  test_factored_v_ema_parity.py  test_find_lr.py  test_find_period_backend.py  test_fsdp2_cpu_offload.py  test_fused_fsdp2_noncontig.py  test_fused_full_update_parity.py  test_fused_update_v2_full_parity.py  test_fused_update_v2_parity.py  test_gefen_factored_v.py  test_gefen_fsdp2_checkpoint.py  test_gefen_muon_hybrid.py  test_hybrid_adamw_dtensor.py  test_hybrid_adamw_layouts_distributed.py  test_hybrid_adamw_staging.py  (+61 more)
tools/: README.md  find_lr.py  lr_calibration.py  run_model_calibration.py
