# Python packaging metadata used by pip/build to install Gefen as an importable package.
# Distribution name is `gefen-x` (this fork); the import name stays `gefen`.
[build-system]
requires = ["setuptools==80.10.2", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gefen-x"
# Single-sourced at runtime via importlib.metadata (see __init__.py __version__).
version = "0.5.0.dev1"
description = "Gefen optimizer for memory-efficient PyTorch training"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Nadav Benedek" },
  { name = "thad0ctor", email = "robert.gilbreth@gmail.com" }
]
maintainers = [
  { name = "thad0ctor", email = "robert.gilbreth@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
# Hard runtime deps. The code needs FSDP2 / public DTensor namespace
# (torch.distributed.tensor), so torch>=2.5. numba is required: it compiles the
# exact-DP codebook solver, and the pure-Python fallback in quantization.py is
# too slow (O(bins^2 * codebooks)) for real training. ninja and setuptools are
# required by torch.utils.cpp_extension.load, which builds the fused CUDA kernels
# at runtime.
dependencies = [
  "numpy>=1.24",
  "torch>=2.5",
  "numba>=0.65",
  "ninja",
  "setuptools>=77"
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/thad0ctor/Gefen-X"
Repository = "https://github.com/thad0ctor/Gefen-X"
Issues = "https://github.com/thad0ctor/Gefen-X/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gefen*"]

[tool.setuptools.package-data]
# Ship the PEP 561 typing marker plus CUDA/C++ sources needed by the runtime JIT.
gefen = ["py.typed"]
"gefen.kernels" = ["*.cu", "*.cpp"]
"gefen.tools" = ["*.md"]

[tool.ruff]
# Non-disruptive: lint only, no reformatting of the existing tree. Line length is
# generous so the current code is not flagged en masse.
line-length = 120
target-version = "py310"
# Benchmark harness scripts are dev-only helpers, not part of the shipped package.
extend-exclude = ["benchmarks"]

[tool.ruff.lint]
# Conservative rule set: pyflakes (F) catches real bugs (undefined names, unused
# imports) without style churn. Active across the shipped package modules.
select = ["F"]

[tool.ruff.lint.per-file-ignores]
# Tests carry intentionally-imported fixtures/helpers.
"tests/*" = ["F401"]
